[project]
name = "udacity-aaind-multiagent-exercises"
version = "0.1.0"
description = "Multi-agent exercises for Udacity AAIND"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "smolagents>=1.23.0",
    "python-dotenv>=1.2.1",
    "matplotlib>=3.10.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "lesson-1-multi-agent-architecture-design",
    "lesson-2-multi-agent-architecture-implementation",
    "lesson-3-orchestrating-agent-activities",
    "lesson-4-routing-and-data-flow-in-agentic-systems",
    "lesson-5-state-management-in-multi-agent-systems",
    "lesson-6-multi-agent-state-coordination-and-orchestration",
    "lesson-7-multi-agent-retrieval-augmented-generation",
]
